[gd_scene load_steps=3 format=3 uid="uid://bmrlb1cpb2jn7"]

[ext_resource type="PackedScene" uid="uid://c57d6gb67un1r" path="res://Core/Character/Player/PlayerUI/PlayerListEntry.tscn" id="1_aujhg"]
[ext_resource type="Script" uid="uid://dlhkwyqrr37xo" path="res://Core/Character/Player/PlayerUI/PlayerList.gd" id="1_lg0mr"]

[node name="PlayerList" type="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_lg0mr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HeaderContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LeftMarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/HeaderContainer/LeftMarginContainer"]
layout_mode = 2
text = "Name"

[node name="MiddleMarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VBoxContainer/HeaderContainer/MiddleMarginContainer"]
layout_mode = 2
text = "Ping"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="PlayerListEntries" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerListEntry" parent="VBoxContainer/ScrollContainer/PlayerListEntries" instance=ExtResource("1_aujhg")]
layout_mode = 2

[node name="PlayerListEntry2" parent="VBoxContainer/ScrollContainer/PlayerListEntries" instance=ExtResource("1_aujhg")]
layout_mode = 2

[node name="PlayerListEntry3" parent="VBoxContainer/ScrollContainer/PlayerListEntries" instance=ExtResource("1_aujhg")]
layout_mode = 2
